--- a/FrontEnd/pages/AdminLogin.html
+++ b/FrontEnd/pages/AdminLogin.html
@@ -19,6 +19,7 @@
 
     <link href="../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
     <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+    <script src="../assets/js/jquery-3.7.1.min.js"></script>
 </head>
 
 <body style="background-color: #f8f9fa">
