--- a/FrontEnd/pages/adminPages/CustomerManagement.html
+++ b/FrontEnd/pages/adminPages/CustomerManagement.html
@@ -17,6 +17,9 @@
 
   <link href="../../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
   <link href="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <style>
     .sidebar-nav .nav-link {
@@ -25,6 +28,9 @@
 
   </style>
   <link rel="stylesheet" href="../../assets/css/Dashboard.css">
+  <script src="../../assets/js/jquery-3.7.1.min.js"></script>
+  <link rel="stylesheet" href="../../assets/css/styles.css">
+
 </head>
 <body style=" background-color: #f8f9fa">
 <!--<header>
@@ -47,135 +53,49 @@
     </nav>
 </header>-->
 
-<nav class="navbar navbar-expand-lg ">
-  <div class="container">
-    <a class="navbar-brand" href="#">Hello Shoe</a>
-    <div class="navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe- Shoe Management System
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <!-- Profile Picture with Admin Name -->
-        <li class="nav-item">
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../../assets/img/admin1.jpg" alt="Profile" class="rounded-circle profile-picture">
-            <span class="d-none d-md-block dropdown-toggle ps-2" style="margin-left: 10px">David Wilson</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-            <li class="dropdown-header">
-              <h6>David Wilson</h6>
-              <span>Manager</span>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="">
-                <i class="bi bi-person"></i>
-                <span>My Profile</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="">
-                <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="">
-                <i class="bi bi-question-circle"></i>
-                <span>Need Help?</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="AdminLogin.html">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-
-          </ul>
-        </li>
-      </ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img src="../../assets/img/admin1.jpg" alt="Admin Photo" class="rounded-circle" style="width: 50px;">
+          David Wilson
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">My Profile</a>
+          <a class="dropdown-item" href="#">Account Settings</a>
+          <a class="dropdown-item" href="#">Need Help</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Sign Out</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
 
-<aside id="sidebar" class="sidebar " style="background-color: lightblue; font-family: 'Arial Black'; color: black; " >
+<div class="sidebar">
+  <a href="#">Dashboard</a>
+  <a href="#">Sales</a>
+  <a href="#">Suppliers</a>
+  <a href="#">Customers</a>
+  <a href="#">Employees</a>
+  <a href="#">Inventory</a>
+  <a href="#">Users</a>
+  <a href="#">Log Out</a>
+</div>
 
-  <ul class="sidebar-nav" id="sidebar-nav">
-
-    <li class="nav-item">
-      <a class="nav-link " href="CustomerManagement.html" style="color: black">
-        <i class="bi bi-grid"></i>
-        <span>Dashboard</span>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" href="#" style="color: black">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Customer Manage</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" href="#" style="color: black">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Inventory Manage</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" href="#" style="color: black">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Sales Manage</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" href="#" style="color: black">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Employee Manage</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" href="#" style="color: black">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Supplier Manage</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="" id="incomeDetails" style="color: black">
-        <i class="bi bi-kanban"></i>
-        <span>Income Details</span>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="" style="color: black">
-        <i class="bi bi-box-arrow-in-right"></i>
-        <span>LogOut</span>
-      </a>
-    </li>
-
-  </ul>
-
-</aside>
-<main id="main" class="main">
+<main id="main" class="main" style="padding-left: 100px">
   <div class="container mt-5">
     <h2>Customer Form</h2>
     <form>
@@ -246,7 +166,7 @@
     </form>
   </div>
 
-  <div class="card info-card" style="margin-top: 10px; margin-right: 12px">
+  <div class="card info-card"  style="margin-top: 10px; margin-right: 12px;margin-left: 90px">
     <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
       <div class="col-11 justify-content-around sectionBorder"
            style="height: 290px; background: white">
