Customer.js created

--- a/FrontEnd/pages/adminDashboard.html
+++ b/FrontEnd/pages/adminDashboard.html
@@ -58,14 +58,15 @@
 </nav>
 
 <div class="sidebar">
-    <a href="#">Dashboard</a>
-    <a href="#">Sales</a>
-    <a href="#">Suppliers</a>
-    <a href="#">Customers</a>
-    <a href="#">Employees</a>
-    <a href="#">Inventory</a>
+    <a href="../pages/adminDashboard.html">Dashboard</a>
+    <a href="adminPages/SaleManagement.html">Sales</a>
+    <a href="adminPages/SupplierManagement.html">Suppliers</a>
+    <a href="adminPages/CustomerManagement.html">Customers</a>
+    <a href="adminPages/EmployeeManagement.html">Employees</a>
+    <a href="adminPages/InventoryManagement.html">Inventory</a>
     <a href="#">Users</a>
     <a href="#">Log Out</a>
+
 </div>
 
 <div class="content">
