--- a/FrontEnd/pages/adminPages/SaleManagement.html
+++ b/FrontEnd/pages/adminPages/SaleManagement.html
@@ -35,7 +35,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe- Shoe Management System
+    <img src="../../assets/icon/icon.jpeg" alt="Logo" class="logo mr-2"> Hello Shoe- Shoe Management System
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -65,14 +65,15 @@
 </nav>
 
 <div class="sidebar">
-  <a href="#">Dashboard</a>
-  <a href="#">Sales</a>
-  <a href="#">Suppliers</a>
-  <a href="#">Customers</a>
-  <a href="#">Employees</a>
-  <a href="#">Inventory</a>
+  <a href="../../pages/adminDashboard.html">Dashboard</a>
+  <a href="../adminPages/SaleManagement.html">Sales</a>
+  <a href="../adminPages/SupplierManagement.html">Suppliers</a>
+  <a href="../adminPages/CustomerManagement.html">Customers</a>
+  <a href="../adminPages/EmployeeManagement.html">Employees</a>
+  <a href="../adminPages/InventoryManagement.html">Inventory</a>
   <a href="#">Users</a>
   <a href="#">Log Out</a>
+
 </div>
 
 
