--- a/FrontEnd/pages/adminPages/CustomerManagement.html
+++ b/FrontEnd/pages/adminPages/CustomerManagement.html
@@ -85,14 +85,15 @@
 </nav>
 
 <div class="sidebar">
-  <a href="#">Dashboard</a>
-  <a href="#">Sales</a>
-  <a href="#">Suppliers</a>
-  <a href="#">Customers</a>
-  <a href="#">Employees</a>
-  <a href="#">Inventory</a>
+  <a href="../../pages/adminDashboard.html">Dashboard</a>
+  <a href="../adminPages/SaleManagement.html">Sales</a>
+  <a href="../adminPages/SupplierManagement.html">Suppliers</a>
+  <a href="../adminPages/CustomerManagement.html">Customers</a>
+  <a href="../adminPages/EmployeeManagement.html">Employees</a>
+  <a href="../adminPages/InventoryManagement.html">Inventory</a>
   <a href="#">Users</a>
   <a href="#">Log Out</a>
+
 </div>
 
 <main id="main" class="main" style="padding-left: 100px">
@@ -160,9 +161,9 @@
           <input type="text" class="form-control" id="inputZip">
         </div>
       </div>
-      <button type="save" class="btn btn-primary">Save</button>
-      <button type="Update" class="btn btn-primary">Update</button>
-      <button type="Delete" class="btn btn-primary">Delete</button>
+      <button type="btnCustomerSave" class="btn btn-primary">Save</button>
+      <button type="btnCustomerUpdate" class="btn btn-primary">Update</button>
+      <button type="btnCustomerDelete" class="btn btn-primary">Delete</button>
     </form>
   </div>
 
@@ -180,7 +181,7 @@
               <th scope="col">Join Date</th>
               <th scope="col">Level</th>
               <th scope="col">Total Point </th>
-              <th scope="col">DOBr</th>
+              <th scope="col">DOB</th>
               <th scope="col">Address</th>
 
             </tr>
