--- a/FrontEnd/pages/adminPages/CustomerManagement.html
+++ b/FrontEnd/pages/adminPages/CustomerManagement.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard Page</title>
-  <link rel="stylesheet" href="../../assets/icon/icon.jpeg" >
+  <!--<link rel="stylesheet" href="../../assets/icon/icon.jpeg" >-->
 
   <meta content="Shoe Shop Management System" name="keywords">
   <meta content="This is shoe management project" name="description">
@@ -28,30 +28,12 @@
 
   </style>
   <link rel="stylesheet" href="../../assets/css/Dashboard.css">
-  <script src="../../assets/js/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" href="../../assets/css/styles.css">
+
+
 
 </head>
 <body style=" background-color: #f8f9fa">
-<!--<header>
-    <div class="d-flex align-items-center justify-content-between">
-        <a href="adminDashboard.html" class="logo d-flex align-items-center">
-            <span class="d-none d-lg-block">Easy <span>Rent.</span></span>
-        </a>
-        <i class="bi bi-list toggle-sidebar-btn"></i>
-    </div>
-
-    <nav class="header-nav ms-auto">
-        <ul class="d-flex align-items-center">
-
-            <li class="nav-item d-block d-lg-none">
-                <a class="nav-link nav-icon search-bar-toggle " href="#">
-                    <i class="bi bi-search"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>-->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
@@ -115,9 +97,9 @@
           <label for="gender">Gender</label>
           <select id="gender" class="form-control">
             <option selected>Choose...</option>
-            <option>Male</option>
-            <option>Female</option>
-            <option>Other</option>
+            <option value="MALE">MALE</option>
+            <option value="FEMALE">FEMALE</option>
+            <option value="OTHER">OTHER</option>
           </select>
         </div>
         <div class="form-group col-md-6">
@@ -128,7 +110,13 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="level">Level</label>
-          <input type="text" class="form-control" id="level" placeholder="Level">
+          <select id="level" class="form-control">
+            <option selected>Choose...</option>
+            <option value="NEW">NEW</option>
+            <option value="GOLD">GOLD</option>
+            <option value="BRONZE">BRONZE</option>
+            <option value="SILVER">SILVER</option>
+          </select>
         </div>
         <div class="form-group col-md-6">
           <label for="totalPoints">Total Points</label>
@@ -141,29 +129,22 @@
           <input type="date" class="form-control" id="dob">
         </div>
       </div>
-      <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
       <div class="form-row">
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
         <div class="form-group col-md-6">
+          <label for="inputCity">City & State</label>
           <input type="text" class="form-control" id="inputCity" placeholder="city">
         </div>
-        <div class="form-group col-md-6">
-          <input type="text" class="form-control" id="inputCountry" placeholder="Country">
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">State</label>
-          <input type="text" class="form-control" id="inputState"placeholder="status">
-        </div>
-        <div class="form-group col-md-2">
-          <label for="inputZip">Zip</label>
-          <input type="text" class="form-control" id="inputZip">
-        </div>
+
       </div>
-      <button type="btnCustomerSave" class="btn btn-primary">Save</button>
-      <button type="btnCustomerUpdate" class="btn btn-primary">Update</button>
-      <button type="btnCustomerDelete" class="btn btn-primary">Delete</button>
+
+      <button id="btnCustomerSave"  type="button" class="btn btn-primary mr-2 " style="background-color: #00d25b">Submit</button>
+      <button id="btnCustomerUpdate" type="button" class="btn btn-primary mr-2" style="background-color: #fc424a">Update</button>
+      <button id="btnCustomerDelete" type="button" class="btn btn-primary mr-2" style="background-color: #ffab00">Delete</button>
+      <button id="btnCustomerClear" type="button" class="btn btn-dark" style="background-color: #8f5fe8">Clear</button>
     </form>
   </div>
 
@@ -191,7 +172,6 @@
         </div>
       </div>
     </div>
-    <!-- View Customer Details Table End -->
   </div>
 </main>
 
@@ -203,5 +183,14 @@
     Designed by <a href="">Sethmini Dissanayake</a>
   </div>
 </footer>
+
+<script src="../../assets/js/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+<script crossorigin="anonymous"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+
+<script src="../../assets/js/customer.js"></script>
+
 </body>
 </html>
