--- a/FrontEnd/pages/adminPages/EmployeeManagement.html
+++ b/FrontEnd/pages/adminPages/EmployeeManagement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Employee Management Form</title>
@@ -117,7 +117,12 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="designation">Designation</label>
-                    <input type="text" class="form-control" id="designation">
+                    <select id="designation" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>Manager</option>
+                        <option>Supervisor</option>
+                        <option>Cashier</option>
+                    </select>
                 </div>
             </div>
             <div class="form-row">
@@ -131,31 +136,26 @@
                     </div>
                 <div class="form-group col-md-6">
                     <label for="attachBranch">Attached Branch</label>
-                    <input type="text" class="form-control" id="attachBranch">
+                    <select id="attachBranch" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>Galle</option>
+                        <option>Colombo</option>
+                        <option>Matara</option>
+                    </select>
+
                 </div>
             </div>
-            <div class="form-group">
-                <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
+
             <div class="form-row">
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
                 <div class="form-group col-md-6">
+                    <label for="inputCity">City & State</label>
                     <input type="text" class="form-control" id="inputCity" placeholder="city">
                 </div>
-                <div class="form-group col-md-6">
-                    <input type="text" class="form-control" id="inputCountry" placeholder="Country">
-                </div>
-                <div class="form-group col-md-4">
-                    <label for="inputState">State</label>
-                    <select id="inputState" class="form-control">
-                        <option selected>Choose...</option>
-                        <option>...</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-2">
-                    <label for="inputZip">Zip</label>
-                    <input type="text" class="form-control" id="inputZip">
-                </div>
+
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
