--- a/FrontEnd/pages/adminPages/EmployeeManagement.html
+++ b/FrontEnd/pages/adminPages/EmployeeManagement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee Management Form</title>
-    <link rel="stylesheet" href="../../assets/icon/icon.jpeg" >
+   <!-- <link rel="stylesheet" href="../../assets/icon/icon.jpeg" >-->
 
     <meta content="Shoe Shop Management System" name="keywords">
     <meta content="This is shoe management project" name="description">
@@ -91,8 +91,8 @@
             </div>
 
             <div class="form-group col-md-6">
-                <label for="employeeImage">Employee Image</label>
-                <input type="file" class="form-control" id="employeeImage">
+                <label for="employeeProfilePic">Employee Image</label>
+                <input type="file" class="form-control" id="employeeProfilePic">
             </div>
 
             <div class="form-row">
@@ -119,9 +119,9 @@
                     <label for="designation">Designation</label>
                     <select id="designation" class="form-control">
                         <option selected>Choose...</option>
-                        <option>Manager</option>
-                        <option>Supervisor</option>
-                        <option>Cashier</option>
+                        <option value="MANAGER">Manager</option>
+                        <option value="SUPERVISOR">Supervisor</option>
+                        <option value="CASHIER">Cashier</option>
                     </select>
                 </div>
             </div>
@@ -130,17 +130,17 @@
                         <label for="accessRole">Access Role</label>
                         <select id="accessRole" class="form-control">
                             <option selected>Choose...</option>
-                            <option>User</option>
-                            <option>Admin</option>
+                            <option value="USER">User</option>
+                            <option value="ADMIN">Admin</option>
                         </select>
                     </div>
                 <div class="form-group col-md-6">
-                    <label for="attachBranch">Attached Branch</label>
-                    <select id="attachBranch" class="form-control">
+                    <label for="branch">Attached Branch</label>
+                    <select id="branch" class="form-control">
                         <option selected>Choose...</option>
-                        <option>Galle</option>
-                        <option>Colombo</option>
-                        <option>Matara</option>
+                        <option value="GALLE">Galle</option>
+                        <option value="COLOMBO">Colombo</option>
+                        <option value="MATARA">Matara</option>
                     </select>
 
                 </div>
@@ -180,9 +180,10 @@
             </div>
 
 
-            <button type="save" class="btn btn-primary">Save</button>
-            <button type="Update" class="btn btn-primary">Update</button>
-            <button type="Delete" class="btn btn-primary">Delete</button>
+            <button id="btnEmployeeSave"  type="button" class="btn btn-primary mr-2 " style="background-color: #00d25b">Submit</button>
+            <button id="btnEmployeeUpdate" type="button" class="btn btn-primary mr-2" style="background-color: #fc424a">Update</button>
+            <button id="btnEmployeeDelete" type="button" class="btn btn-primary mr-2" style="background-color: #ffab00">Delete</button>
+            <button id="btnEmployeeClear" type="button" class="btn btn-dark" style="background-color: #8f5fe8">Clear</button>
         </form>
     </div>
 
