--- a/FrontEnd/pages/adminPages/SupplierManagement.html
+++ b/FrontEnd/pages/adminPages/SupplierManagement.html
@@ -99,26 +99,18 @@
           </select>
         </div>
       </div>
-      <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
       <div class="form-row">
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        </div>
         <div class="form-group col-md-6">
+          <label for="inputCity">City & State</label>
           <input type="text" class="form-control" id="inputCity" placeholder="city">
         </div>
-        <div class="form-group col-md-6">
-          <input type="text" class="form-control" id="inputCountry" placeholder="Country">
-        </div>
-          <div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <input type="text" class="form-control" id="inputState"placeholder="status">
-        </div>
-        <div class="form-group col-md-2">
-          <label for="inputZip">Zip</label>
-          <input type="text" class="form-control" id="inputZip">
-        </div>
+
       </div>
+
       <div class="form-group">
         <label for="contactNumber1">Contact</label>
         <div class="form-row">
@@ -130,13 +122,17 @@
           </div>
         </div>
       </div>
+
       <div class="form-group">
-        <label for="inputAddress">E-mail</label>
+        <label for="inputEmail">E-mail</label>
         <input type="text" class="form-control" id="inputEmail" placeholder="abcd12#gmail.com">
       </div>
-      <button type="save" class="btn btn-primary">Save</button>
-      <button type="Update" class="btn btn-primary">Update</button>
-      <button type="Delete" class="btn btn-primary">Delete</button>
+
+      <button id="btnSupplierSave"  type="button" class="btn btn-primary mr-2 " style="background-color: #00d25b">Submit</button>
+      <button id="btnSupplierUpdate" type="button" class="btn btn-primary mr-2" style="background-color: #fc424a">Update</button>
+      <button id="btnSupplierDelete" type="button" class="btn btn-primary mr-2" style="background-color: #ffab00">Delete</button>
+      <button id="btnSupplierClear" type="button" class="btn btn-dark" style="background-color: #8f5fe8">Clear</button>
+
     </form>
   </div>
 
