--- a/FrontEnd/pages/adminPages/SupplierManagement.html
+++ b/FrontEnd/pages/adminPages/SupplierManagement.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Supplier Management Form</title>
-  <link rel="stylesheet" href="../../assets/icon/icon.jpeg" >
+  <!--<link rel="stylesheet" href="../../assets/icon/icon.jpeg" >-->
 
   <meta content="Shoe Shop Management System" name="keywords">
   <meta content="This is shoe management project" name="description">
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="../../assets/css/Dashboard.css">
   <script src="../../assets/js/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" href="../../assets/css/styles.css">
+  <script src="../../assets/js/supplier.js"></script>
 </head>
 <body style=" background-color: #f8f9fa">
 
@@ -94,8 +95,8 @@
           <label for="category">Category</label>
           <select id="category" class="form-control">
             <option selected>Choose...</option>
-            <option>International</option>
-            <option>Local</option>
+            <option value="INTERNATIONAL">INTERNATIONAL</option>
+            <option value="LOCAL">LOCAL</option>
           </select>
         </div>
       </div>
@@ -122,7 +123,6 @@
           </div>
         </div>
       </div>
-
       <div class="form-group">
         <label for="inputEmail">E-mail</label>
         <input type="text" class="form-control" id="inputEmail" placeholder="abcd12#gmail.com">
@@ -166,7 +166,7 @@
 
 <footer id="footer" class="footer">
   <div class="copyright">
-    &copy; Copyright <strong><span>Shoe Managemnt Syatem</span></strong>. All Rights Reserved
+    &copy; Copyright <strong><span>Shoe Management System</span></strong>. All Rights Reserved
   </div>
   <div class="credits">
     Designed by <a href="">Sethmini Dissanayake</a>
